@@ -6,6 +6,9 @@ PHP                                                                        NEWS
   . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
     (Bob)
 
+- Fileinfo:
+  . Fixed bug #71434 (finfo throws notice for specific python file). (Laruence)
+
 04 Feb 2016 PHP 7.0.3
 
 - Core:
